<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        tools:context=".presentation.entrance.SignInFragment">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_welcome"
            style="@style/TitleH1"
            android:layout_marginTop="92dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_sign_in_to_continue"
            style="@style/SubtitleH1Gray"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <TextView
            android:id="@+id/emailHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:textAppearance="@style/HintText"
            android:layout_marginTop="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitleTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/emailHintTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_password"
            android:textAppearance="@style/HintText"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordHintTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/placeholder_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/sign_in"
            app:cornerRadius="8dp"
            android:textAppearance="@style/ButtonText"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

        <TextView
            android:id="@+id/forgetPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_text"
            android:textAppearance="@style/ClickableText"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/signInButton" />

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:text="@string/sign_up_text"
            android:textAppearance="@style/BodyRegular"
            android:textAlignment="center"
            android:textColorHighlight="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
