<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        tools:context=".presentation.entrance.SignUpPart2Fragment">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_personal_data"
            style="@style/TitleH1"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_personal_data"
            style="@style/SubtitleH1Gray"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <TextView
            android:id="@+id/fullNameHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_full_name"
            android:textAppearance="@style/HintText"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitleTextView"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/fullNameHintTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_full_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/academicGroupNumberHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_academic_group_number"
            android:textAppearance="@style/HintText"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullNameInputLayout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/academicGroupNumberInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/academicGroupNumberHintTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_academic_group_number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/specialityNameHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_speciality_name"
            android:textAppearance="@style/HintText"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/academicGroupNumberInputLayout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/specialityNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/specialityNameHintTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_speciality_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/phoneNumberHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_phone_number"
            android:textAppearance="@style/HintText"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/specialityNameInputLayout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberHintTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_phone_number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/confirmationCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberInputLayout" />

        <TextView
            android:id="@+id/confirmationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/agreement_to_terms_of_personal_data"
            android:textAppearance="@style/BodyRegular"
            android:layout_marginTop="26dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberInputLayout"
            app:layout_constraintStart_toEndOf="@id/confirmationCheckBox"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registrationButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/signup"
            android:textAppearance="@style/ButtonText"
            app:cornerRadius="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/confirmationTextView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
