<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_create_account"
            style="@style/TitleH1"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/subtitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SubtitleH1Gray"
            android:text="@string/subtitle_create_account"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"/>

        <TextView
            android:id="@+id/emailHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:textAppearance="@style/HintText"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/subtitleTextView"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/emailHintTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_password"
            android:textAppearance="@style/HintText"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordHintTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/placeholder_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordRepeatHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_password_repeat"
            android:textAppearance="@style/HintText"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRepeatInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordRepeatHintTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/placeholder_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextStepButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/next_step"
            android:textAppearance="@style/ButtonText"
            app:cornerRadius="8dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@id/alreadyRegisterTextView"/>

        <TextView
            android:id="@+id/alreadyRegisterTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_signed_up_text"
            android:textAppearance="@style/BodyRegular"
            android:textAlignment="center"
            android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
