<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/item_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingTop="8dp">

                <include
                    android:id="@+id/statusMessage"
                    layout="@layout/item_status_message" />

                <TextView
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/application_scholarship_type" />

                <TextView
                    android:id="@+id/scholarshipType"
                    style="@style/BodyRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Стипендия Правительства РФ по приоритетным направлениям" />

                <TextView
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/application_full_name" />

                <TextView
                    android:id="@+id/fullName"
                    style="@style/BodyRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Глухов Антон Сергеевич" />

                <TextView
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/application_academic_group_number" />

                <TextView
                    android:id="@+id/academicGroupNumber"
                    style="@style/BodyRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="РИ-480012" />

                <TextView
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/application_speciality_code" />

                <TextView
                    android:id="@+id/specialityCode"
                    style="@style/BodyRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="09.03.04" />

                <TextView
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/application_speciality_name" />

                <TextView
                    android:id="@+id/specialityName"
                    style="@style/BodyRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Программная инженерия" />

                <TextView
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/application_total_marks_count" />

                <TextView
                    android:id="@+id/totalMarksCount"
                    style="@style/BodyRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="29" />

                <TextView
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/application_excellent_marks_count" />

                <TextView
                    android:id="@+id/excellentMarksCount"
                    style="@style/BodyRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="28" />

                <TextView
                    style="@style/Title18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/application_linked_documents" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/documentsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/application_cancel"
                    android:textAppearance="@style/ButtonText"
                    android:textColor="@color/secondary_red"
                    app:cornerRadius="8dp"
                    app:rippleColor="@color/secondary_red_light"
                    app:strokeColor="@color/secondary_red"
                    app:strokeWidth="1dp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
