<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        tools:context=".presentation.ui.profile.ProfileFragment">

        <TextView
            android:id="@+id/title"
            style="@style/TitleH1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="17dp"
            android:text="@string/profile_title"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_profile_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:ignore="contentDescription" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:text="@string/profile_edit"
            android:textAppearance="@style/ButtonText"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/profileIcon" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/logoutButton"
            app:layout_constraintTop_toBottomOf="@id/editButton">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/profile_full_name" />

                <TextView
                    android:id="@+id/fullName"
                    style="@style/BodyRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Глухов Антон Сергеевич" />

                <TextView
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/profile_academic_group_number" />

                <TextView
                    android:id="@+id/academicGroupNumber"
                    style="@style/BodyRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="РИ-480022" />

                <TextView
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/profile_email" />

                <TextView
                    android:id="@+id/email"
                    style="@style/BodyRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="anton@nezavod.ru" />

                <TextView
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/profile_phone_number" />

                <TextView
                    android:id="@+id/phoneNumber"
                    style="@style/BodyRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="+7 (952) 726-64-70" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/profile_log_out"
            android:textAppearance="@style/ButtonText"
            android:textColor="@color/secondary_red"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:rippleColor="@color/secondary_red_light"
            app:strokeColor="@color/secondary_red"
            app:strokeWidth="1dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
